--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "53afe6a8",
+   "id": "cfe09409",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "066a5602",
+   "id": "43fc10bb",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9f2a537c",
+   "id": "53e8abc6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ef1717c8",
+   "id": "88b85741",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "64a5cc12",
+   "id": "cc156204",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "416f3fd5",
+   "id": "3e1465e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "c0d686b9",
+   "id": "b8b12061",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "89403f3c",
+   "id": "5cc6cfa9",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "ddc2cbf1",
+   "id": "fe5ba105",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "667dac23",
+   "id": "27aafd03",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "2b090eca",
+   "id": "4a453a2f",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "f5bec705",
+   "id": "73b6a1ed",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "28c6dc54",
+   "id": "f6c135d3",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "b8dcf1ee",
+   "id": "a477f1a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "8814e2a5",
+   "id": "b8100059",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1764ff6",
+   "id": "58fac316",
    "metadata": {},
    "source": [
     "# Types de données en Python"
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a854e698",
+   "id": "9c3ce68e",
    "metadata": {},
    "source": [
     "## Listes"
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "05275989",
+   "id": "5bde053e",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "73760180",
+   "id": "76a81d31",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "400bf45e",
+   "id": "8f53db3c",
    "metadata": {},
    "source": [
     "## Tuples"
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "f24a0da0",
+   "id": "d754a4de",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "952b7494",
+   "id": "86f9d184",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "a64e3010",
+   "id": "0ab38abe",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b306304e",
+   "id": "b8fc9cda",
    "metadata": {},
    "source": [
     "## Dictionnaires"
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "a1d93bb2",
+   "id": "75e579cf",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "59b19709",
+   "id": "7ea14b57",
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "366babd5",
+   "id": "936c1514",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "59573e4e",
+   "id": "41917e22",
    "metadata": {},
    "outputs": [
     {
@@ -547,20 +547,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8d911bcc",
+   "execution_count": 76,
+   "id": "7c0c1474",
    "metadata": {},
    "outputs": [],
    "source": [
     "sujet = \"Candidature spontanee de Matthieu Falce\"\n",
     "# vous devez écrire une fonction qui retourne compte chacune \n",
-    "# des lettre présentes dans sujet (a apparait N fois, d apparait K fois...)"
+    "# des lettre présentes dans sujet (a apparait N fois, d apparait K fois...)\n",
+    "def solution_avec_count(sujet):\n",
+    "    \n",
+    "    return res"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30b9bc45",
+   "id": "a3d17f2a",
    "metadata": {},
    "outputs": [],
    "source": []
