--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "cfe09409",
+   "id": "e57fcaf9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "43fc10bb",
+   "id": "f7fc3493",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "53e8abc6",
+   "id": "921d83b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "88b85741",
+   "id": "38a3ca45",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "cc156204",
+   "id": "f27d1e1c",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "3e1465e7",
+   "id": "98d2afb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "b8b12061",
+   "id": "fa72451a",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "5cc6cfa9",
+   "id": "2332c31c",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "fe5ba105",
+   "id": "b49b3ac6",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "27aafd03",
+   "id": "542091d2",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "4a453a2f",
+   "id": "01409886",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "73b6a1ed",
+   "id": "9523e6f3",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "f6c135d3",
+   "id": "e7c7fa91",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "a477f1a6",
+   "id": "79426ddc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "b8100059",
+   "id": "ec426c72",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58fac316",
+   "id": "31ab7514",
    "metadata": {},
    "source": [
     "# Types de données en Python"
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c3ce68e",
+   "id": "e144e9b1",
    "metadata": {},
    "source": [
     "## Listes"
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "5bde053e",
+   "id": "8c7fae64",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "76a81d31",
+   "id": "f9e16ed8",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f53db3c",
+   "id": "65d65359",
    "metadata": {},
    "source": [
     "## Tuples"
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "d754a4de",
+   "id": "67dfe93f",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "86f9d184",
+   "id": "7882887e",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "0ab38abe",
+   "id": "09d46142",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8fc9cda",
+   "id": "2331c5ca",
    "metadata": {},
    "source": [
     "## Dictionnaires"
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "75e579cf",
+   "id": "0975a69b",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "7ea14b57",
+   "id": "5eddb8dd",
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "936c1514",
+   "id": "5e6ae13e",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "41917e22",
+   "id": "9e2030e1",
    "metadata": {},
    "outputs": [
     {
@@ -547,23 +547,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "7c0c1474",
+   "execution_count": 79,
+   "id": "a5c1c64f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('C', 1), ('a', 5), ('n', 3), ('d', 3), ('i', 2), ('d', 3), ('a', 5), ('t', 4), ('u', 2), ('r', 1), ('e', 6), (' ', 4), ('s', 1), ('p', 1), ('o', 1), ('n', 3), ('t', 4), ('a', 5), ('n', 3), ('e', 6), ('e', 6), (' ', 4), ('d', 3), ('e', 6), (' ', 4), ('M', 1), ('a', 5), ('t', 4), ('t', 4), ('h', 1), ('i', 2), ('e', 6), ('u', 2), (' ', 4), ('F', 1), ('a', 5), ('l', 1), ('c', 1), ('e', 6)]\n"
+     ]
+    }
+   ],
    "source": [
     "sujet = \"Candidature spontanee de Matthieu Falce\"\n",
     "# vous devez écrire une fonction qui retourne compte chacune \n",
     "# des lettre présentes dans sujet (a apparait N fois, d apparait K fois...)\n",
+    "\n",
+    "def lettre_unique(texte):\n",
+    "    res = \"\"\n",
+    "    for \n",
+    "\n",
     "def solution_avec_count(sujet):\n",
-    "    \n",
-    "    return res"
+    "    res = []\n",
+    "    for letter in lettre_unique(sujet):\n",
+    "        res.append((letter, sujet.count(letter)))\n",
+    "    return res\n",
+    "\n",
+    "print(solution_avec_count(sujet))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "9268c940",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sujet.count(\"a\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3d17f2a",
+   "id": "32bcbf54",
    "metadata": {},
    "outputs": [],
    "source": []
