--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "e57fcaf9",
+   "id": "7f371c75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "f7fc3493",
+   "id": "14abdcbd",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "921d83b3",
+   "id": "6045bc25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "38a3ca45",
+   "id": "6227847f",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f27d1e1c",
+   "id": "b3bf9f5f",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "98d2afb5",
+   "id": "1aef5b18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "fa72451a",
+   "id": "5113bff3",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "2332c31c",
+   "id": "e0776b17",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "b49b3ac6",
+   "id": "7cf0bee6",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "542091d2",
+   "id": "b09deb69",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "01409886",
+   "id": "cf07ac2b",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "9523e6f3",
+   "id": "fa0d0350",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "e7c7fa91",
+   "id": "3bdb519c",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "79426ddc",
+   "id": "5856e67a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "ec426c72",
+   "id": "de0b7a7d",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31ab7514",
+   "id": "f73ce83d",
    "metadata": {},
    "source": [
     "# Types de données en Python"
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e144e9b1",
+   "id": "afe9fe79",
    "metadata": {},
    "source": [
     "## Listes"
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "8c7fae64",
+   "id": "d7c9b9de",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "f9e16ed8",
+   "id": "00339bef",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65d65359",
+   "id": "6320c3ff",
    "metadata": {},
    "source": [
     "## Tuples"
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "67dfe93f",
+   "id": "716fdc4f",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "7882887e",
+   "id": "2d5f905d",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "09d46142",
+   "id": "1bd60abe",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2331c5ca",
+   "id": "4f6c0101",
    "metadata": {},
    "source": [
     "## Dictionnaires"
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "0975a69b",
+   "id": "0c79d722",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "5eddb8dd",
+   "id": "ea4bd863",
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "5e6ae13e",
+   "id": "a1b1ae51",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "9e2030e1",
+   "id": "ee178751",
    "metadata": {},
    "outputs": [
     {
@@ -547,15 +547,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "a5c1c64f",
+   "execution_count": 80,
+   "id": "212cee65",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('C', 1), ('a', 5), ('n', 3), ('d', 3), ('i', 2), ('d', 3), ('a', 5), ('t', 4), ('u', 2), ('r', 1), ('e', 6), (' ', 4), ('s', 1), ('p', 1), ('o', 1), ('n', 3), ('t', 4), ('a', 5), ('n', 3), ('e', 6), ('e', 6), (' ', 4), ('d', 3), ('e', 6), (' ', 4), ('M', 1), ('a', 5), ('t', 4), ('t', 4), ('h', 1), ('i', 2), ('e', 6), ('u', 2), (' ', 4), ('F', 1), ('a', 5), ('l', 1), ('c', 1), ('e', 6)]\n"
+      "[('C', 1), ('a', 5), ('n', 3), ('d', 3), ('i', 2), ('t', 4), ('u', 2), ('r', 1), ('e', 6), (' ', 4), ('s', 1), ('p', 1), ('o', 1), ('M', 1), ('h', 1), ('F', 1), ('l', 1), ('c', 1)]\n"
      ]
     }
    ],
@@ -566,8 +566,11 @@
     "\n",
     "def lettre_unique(texte):\n",
     "    res = \"\"\n",
-    "    for \n",
-    "\n",
+    "    for letter in texte:\n",
+    "        if letter not in res:\n",
+    "            res += letter\n",
+    "    return res\n",
+    "            \n",
     "def solution_avec_count(sujet):\n",
     "    res = []\n",
     "    for letter in lettre_unique(sujet):\n",
@@ -580,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "9268c940",
+   "id": "9128792c",
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32bcbf54",
+   "id": "b2ebb192",
    "metadata": {},
    "outputs": [],
    "source": []
