--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "9649d838",
+   "id": "d40f61cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "1242923f",
+   "id": "2a354e2f",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ca5969b6",
+   "id": "9f1d6fed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "cb73cc3d",
+   "id": "a916c3cc",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "2fc1f802",
+   "id": "0de51d36",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "22f0a6bf",
+   "id": "fa2d69ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "589fe4e3",
+   "id": "6c26b857",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "c1b33a81",
+   "id": "ca6c25b2",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "f465b350",
+   "id": "59b1b0f8",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "88519199",
+   "id": "4982a0b0",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "1b2f4791",
+   "id": "985fd656",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "e3dd2da2",
+   "id": "e2d98450",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "5271d877",
+   "id": "0b5960d1",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "5bf7e207",
+   "id": "d3b36ef1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "f8298359",
+   "id": "8a381ff6",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13492eee",
+   "id": "e4815837",
    "metadata": {},
    "source": [
     "# Types de données en Python"
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdcbe0d6",
+   "id": "adb50013",
    "metadata": {},
    "source": [
     "## Listes"
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "0667f8b6",
+   "id": "d62b1004",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "961a9115",
+   "id": "82779d17",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d888b0f7",
+   "id": "cce4ae51",
    "metadata": {},
    "source": [
     "## Tuples"
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "975a8b76",
+   "id": "f44405a1",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "a9bea876",
+   "id": "10600437",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "2c5fc1f0",
+   "id": "0bc7eb40",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e580994",
+   "id": "1a332e6c",
    "metadata": {},
    "source": [
     "## Dictionnaires"
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "738b8106",
+   "id": "8497ff64",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "8d974dc8",
+   "id": "0937e0ff",
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "b734adbf",
+   "id": "8f5f283b",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "424f641c",
+   "id": "f2f8a47c",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "4f891c00",
+   "id": "c1bf642f",
    "metadata": {},
    "outputs": [
     {
@@ -577,13 +577,18 @@
     "        res.append((letter, sujet.count(letter)))\n",
     "    return res\n",
     "\n",
+    "def solution_avec_dict(sujet):\n",
+    "    res = {}\n",
+    "    for letter in sujet:\n",
+    "        \n",
+    "\n",
     "print(solution_avec_count(sujet))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "a07f79c8",
+   "id": "c5824a04",
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95c6f6eb",
+   "id": "8213bb7f",
    "metadata": {},
    "outputs": [],
    "source": [
