--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d40f61cd",
+   "id": "7828b1c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "2a354e2f",
+   "id": "f038074e",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9f1d6fed",
+   "id": "fcfe7bfc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a916c3cc",
+   "id": "059346dd",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "0de51d36",
+   "id": "2924ab16",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "fa2d69ad",
+   "id": "84f7b93d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "6c26b857",
+   "id": "84ded4f2",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "ca6c25b2",
+   "id": "ccdac2bd",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "59b1b0f8",
+   "id": "17f3d9b7",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "4982a0b0",
+   "id": "6ad4d856",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "985fd656",
+   "id": "e6607d69",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "e2d98450",
+   "id": "965dbc23",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "0b5960d1",
+   "id": "9b361ab9",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "d3b36ef1",
+   "id": "a6711b05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "8a381ff6",
+   "id": "9ed56e7e",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4815837",
+   "id": "9e4d6335",
    "metadata": {},
    "source": [
     "# Types de données en Python"
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adb50013",
+   "id": "2b96ee10",
    "metadata": {},
    "source": [
     "## Listes"
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "d62b1004",
+   "id": "650a12a6",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "82779d17",
+   "id": "6b9f4243",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cce4ae51",
+   "id": "23acf7e4",
    "metadata": {},
    "source": [
     "## Tuples"
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "f44405a1",
+   "id": "8422989b",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "10600437",
+   "id": "7099cb92",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "0bc7eb40",
+   "id": "0e8be0a6",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a332e6c",
+   "id": "9ea027a6",
    "metadata": {},
    "source": [
     "## Dictionnaires"
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "8497ff64",
+   "id": "e43ec908",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "0937e0ff",
+   "id": "7fa72eda",
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "8f5f283b",
+   "id": "b3cbd36e",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "f2f8a47c",
+   "id": "ea8e9382",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "c1bf642f",
+   "id": "a21b6113",
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,12 @@
     "def solution_avec_dict(sujet):\n",
     "    res = {}\n",
     "    for letter in sujet:\n",
-    "        \n",
+    "        print(res)\n",
+    "        if letter in res:\n",
+    "            res[letter] = res[letter] + 1\n",
+    "        else:\n",
+    "            res[letter] = 1\n",
+    "    retrn\n",
     "\n",
     "print(solution_avec_count(sujet))"
    ]
@@ -588,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "c5824a04",
+   "id": "515a5bd9",
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8213bb7f",
+   "id": "ae880caa",
    "metadata": {},
    "outputs": [],
    "source": [
