--- a/tape_en_cours/Jour 3.ipynb
+++ b/tape_en_cours/Jour 3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "7828b1c6",
+   "id": "4a6d3982",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "f038074e",
+   "id": "a1108257",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "fcfe7bfc",
+   "id": "715d9e7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "059346dd",
+   "id": "b016a94d",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "2924ab16",
+   "id": "b044d6a0",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "84f7b93d",
+   "id": "95f2e217",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "84ded4f2",
+   "id": "b9af8ba7",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "ccdac2bd",
+   "id": "c1779819",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "17f3d9b7",
+   "id": "21be8e6b",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "6ad4d856",
+   "id": "be8e7ee5",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "e6607d69",
+   "id": "ae08cb5b",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "965dbc23",
+   "id": "70dd2d4c",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "9b361ab9",
+   "id": "98c60fc5",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "a6711b05",
+   "id": "f7b5aaf4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "9ed56e7e",
+   "id": "1775ecde",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e4d6335",
+   "id": "6da68c98",
    "metadata": {},
    "source": [
     "# Types de données en Python"
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b96ee10",
+   "id": "1056882d",
    "metadata": {},
    "source": [
     "## Listes"
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "650a12a6",
+   "id": "fc834c61",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "6b9f4243",
+   "id": "b216c7ef",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23acf7e4",
+   "id": "a0146907",
    "metadata": {},
    "source": [
     "## Tuples"
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "8422989b",
+   "id": "6c7643e1",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "7099cb92",
+   "id": "1394358f",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "0e8be0a6",
+   "id": "9f94af5c",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ea027a6",
+   "id": "c2bc7aa6",
    "metadata": {},
    "source": [
     "## Dictionnaires"
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "e43ec908",
+   "id": "c0608814",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "7fa72eda",
+   "id": "c4df115f",
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "b3cbd36e",
+   "id": "ee42dd70",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "ea8e9382",
+   "id": "d43b82de",
    "metadata": {},
    "outputs": [
     {
@@ -547,15 +547,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "a21b6113",
+   "execution_count": 81,
+   "id": "aca09454",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('C', 1), ('a', 5), ('n', 3), ('d', 3), ('i', 2), ('t', 4), ('u', 2), ('r', 1), ('e', 6), (' ', 4), ('s', 1), ('p', 1), ('o', 1), ('M', 1), ('h', 1), ('F', 1), ('l', 1), ('c', 1)]\n"
+      "{}\n",
+      "{'C': 1}\n",
+      "{'C': 1, 'a': 1}\n",
+      "{'C': 1, 'a': 1, 'n': 1}\n",
+      "{'C': 1, 'a': 1, 'n': 1, 'd': 1}\n",
+      "{'C': 1, 'a': 1, 'n': 1, 'd': 1, 'i': 1}\n",
+      "{'C': 1, 'a': 1, 'n': 1, 'd': 2, 'i': 1}\n",
+      "{'C': 1, 'a': 2, 'n': 1, 'd': 2, 'i': 1}\n",
+      "{'C': 1, 'a': 2, 'n': 1, 'd': 2, 'i': 1, 't': 1}\n",
+      "{'C': 1, 'a': 2, 'n': 1, 'd': 2, 'i': 1, 't': 1, 'u': 1}\n",
+      "{'C': 1, 'a': 2, 'n': 1, 'd': 2, 'i': 1, 't': 1, 'u': 1, 'r': 1}\n",
+      "{'C': 1, 'a': 2, 'n': 1, 'd': 2, 'i': 1, 't': 1, 'u': 1, 'r': 1, 'e': 1}\n",
+      "{'C': 1, 'a': 2, 'n': 1, 'd': 2, 'i': 1, 't': 1, 'u': 1, 'r': 1, 'e': 1, ' ': 1}\n",
+      "{'C': 1, 'a': 2, 'n': 1, 'd': 2, 'i': 1, 't': 1, 'u': 1, 'r': 1, 'e': 1, ' ': 1, 's': 1}\n",
+      "{'C': 1, 'a': 2, 'n': 1, 'd': 2, 'i': 1, 't': 1, 'u': 1, 'r': 1, 'e': 1, ' ': 1, 's': 1, 'p': 1}\n",
+      "{'C': 1, 'a': 2, 'n': 1, 'd': 2, 'i': 1, 't': 1, 'u': 1, 'r': 1, 'e': 1, ' ': 1, 's': 1, 'p': 1, 'o': 1}\n",
+      "{'C': 1, 'a': 2, 'n': 2, 'd': 2, 'i': 1, 't': 1, 'u': 1, 'r': 1, 'e': 1, ' ': 1, 's': 1, 'p': 1, 'o': 1}\n",
+      "{'C': 1, 'a': 2, 'n': 2, 'd': 2, 'i': 1, 't': 2, 'u': 1, 'r': 1, 'e': 1, ' ': 1, 's': 1, 'p': 1, 'o': 1}\n",
+      "{'C': 1, 'a': 3, 'n': 2, 'd': 2, 'i': 1, 't': 2, 'u': 1, 'r': 1, 'e': 1, ' ': 1, 's': 1, 'p': 1, 'o': 1}\n",
+      "{'C': 1, 'a': 3, 'n': 3, 'd': 2, 'i': 1, 't': 2, 'u': 1, 'r': 1, 'e': 1, ' ': 1, 's': 1, 'p': 1, 'o': 1}\n",
+      "{'C': 1, 'a': 3, 'n': 3, 'd': 2, 'i': 1, 't': 2, 'u': 1, 'r': 1, 'e': 2, ' ': 1, 's': 1, 'p': 1, 'o': 1}\n",
+      "{'C': 1, 'a': 3, 'n': 3, 'd': 2, 'i': 1, 't': 2, 'u': 1, 'r': 1, 'e': 3, ' ': 1, 's': 1, 'p': 1, 'o': 1}\n",
+      "{'C': 1, 'a': 3, 'n': 3, 'd': 2, 'i': 1, 't': 2, 'u': 1, 'r': 1, 'e': 3, ' ': 2, 's': 1, 'p': 1, 'o': 1}\n",
+      "{'C': 1, 'a': 3, 'n': 3, 'd': 3, 'i': 1, 't': 2, 'u': 1, 'r': 1, 'e': 3, ' ': 2, 's': 1, 'p': 1, 'o': 1}\n",
+      "{'C': 1, 'a': 3, 'n': 3, 'd': 3, 'i': 1, 't': 2, 'u': 1, 'r': 1, 'e': 4, ' ': 2, 's': 1, 'p': 1, 'o': 1}\n",
+      "{'C': 1, 'a': 3, 'n': 3, 'd': 3, 'i': 1, 't': 2, 'u': 1, 'r': 1, 'e': 4, ' ': 3, 's': 1, 'p': 1, 'o': 1}\n",
+      "{'C': 1, 'a': 3, 'n': 3, 'd': 3, 'i': 1, 't': 2, 'u': 1, 'r': 1, 'e': 4, ' ': 3, 's': 1, 'p': 1, 'o': 1, 'M': 1}\n",
+      "{'C': 1, 'a': 4, 'n': 3, 'd': 3, 'i': 1, 't': 2, 'u': 1, 'r': 1, 'e': 4, ' ': 3, 's': 1, 'p': 1, 'o': 1, 'M': 1}\n",
+      "{'C': 1, 'a': 4, 'n': 3, 'd': 3, 'i': 1, 't': 3, 'u': 1, 'r': 1, 'e': 4, ' ': 3, 's': 1, 'p': 1, 'o': 1, 'M': 1}\n",
+      "{'C': 1, 'a': 4, 'n': 3, 'd': 3, 'i': 1, 't': 4, 'u': 1, 'r': 1, 'e': 4, ' ': 3, 's': 1, 'p': 1, 'o': 1, 'M': 1}\n",
+      "{'C': 1, 'a': 4, 'n': 3, 'd': 3, 'i': 1, 't': 4, 'u': 1, 'r': 1, 'e': 4, ' ': 3, 's': 1, 'p': 1, 'o': 1, 'M': 1, 'h': 1}\n",
+      "{'C': 1, 'a': 4, 'n': 3, 'd': 3, 'i': 2, 't': 4, 'u': 1, 'r': 1, 'e': 4, ' ': 3, 's': 1, 'p': 1, 'o': 1, 'M': 1, 'h': 1}\n",
+      "{'C': 1, 'a': 4, 'n': 3, 'd': 3, 'i': 2, 't': 4, 'u': 1, 'r': 1, 'e': 5, ' ': 3, 's': 1, 'p': 1, 'o': 1, 'M': 1, 'h': 1}\n",
+      "{'C': 1, 'a': 4, 'n': 3, 'd': 3, 'i': 2, 't': 4, 'u': 2, 'r': 1, 'e': 5, ' ': 3, 's': 1, 'p': 1, 'o': 1, 'M': 1, 'h': 1}\n",
+      "{'C': 1, 'a': 4, 'n': 3, 'd': 3, 'i': 2, 't': 4, 'u': 2, 'r': 1, 'e': 5, ' ': 4, 's': 1, 'p': 1, 'o': 1, 'M': 1, 'h': 1}\n",
+      "{'C': 1, 'a': 4, 'n': 3, 'd': 3, 'i': 2, 't': 4, 'u': 2, 'r': 1, 'e': 5, ' ': 4, 's': 1, 'p': 1, 'o': 1, 'M': 1, 'h': 1, 'F': 1}\n",
+      "{'C': 1, 'a': 5, 'n': 3, 'd': 3, 'i': 2, 't': 4, 'u': 2, 'r': 1, 'e': 5, ' ': 4, 's': 1, 'p': 1, 'o': 1, 'M': 1, 'h': 1, 'F': 1}\n",
+      "{'C': 1, 'a': 5, 'n': 3, 'd': 3, 'i': 2, 't': 4, 'u': 2, 'r': 1, 'e': 5, ' ': 4, 's': 1, 'p': 1, 'o': 1, 'M': 1, 'h': 1, 'F': 1, 'l': 1}\n",
+      "{'C': 1, 'a': 5, 'n': 3, 'd': 3, 'i': 2, 't': 4, 'u': 2, 'r': 1, 'e': 5, ' ': 4, 's': 1, 'p': 1, 'o': 1, 'M': 1, 'h': 1, 'F': 1, 'l': 1, 'c': 1}\n",
+      "{'C': 1, 'a': 5, 'n': 3, 'd': 3, 'i': 2, 't': 4, 'u': 2, 'r': 1, 'e': 6, ' ': 4, 's': 1, 'p': 1, 'o': 1, 'M': 1, 'h': 1, 'F': 1, 'l': 1, 'c': 1}\n"
      ]
     }
    ],
@@ -585,15 +624,15 @@
     "            res[letter] = res[letter] + 1\n",
     "        else:\n",
     "            res[letter] = 1\n",
-    "    retrn\n",
+    "    return res\n",
     "\n",
-    "print(solution_avec_count(sujet))"
+    "print(solution_avec_dict(sujet))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "515a5bd9",
+   "id": "f178bd4b",
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae880caa",
+   "id": "9ccd3922",
    "metadata": {},
    "outputs": [],
    "source": [
